--- a/src/app/mensajes/mensajes.component.css
+++ b/src/app/mensajes/mensajes.component.css
@@ -25,7 +25,7 @@ body {
 .brand-name {
   font-size: 1.25rem;
   font-weight: bold;
-  color: #7b3ff2;
+  color: #6b2d64;
 }
 
 .menu a {
@@ -37,12 +37,12 @@ body {
 }
 
 .menu a:hover {
-  color: #7b3ff2;
+  color: #6b2d64;
 }
 
 .menu .active {
-  color: #7b3ff2;
-  border-bottom: 2px solid #7b3ff2;
+  color: #6b2d64;
+  border-bottom: 2px solid #6b2d64;
 }
 
 .avatar {
@@ -68,19 +68,20 @@ body {
 }
 
 .sidebar-header h2 {
-  color: #7b3ff2;
+  color: #6b2d64;
   font-weight: 600;
 }
 
 .badge {
   background-color: #e0caff;
-  color: #673ab7;
+  color: #6b2d64;
   font-size: 0.8rem;
   padding: 0.2rem 0.6rem;
   border-radius: 10px;
 }
 
 .contact {
+  color: #6b2d64;
   display: flex;
   align-items: center;
   gap: 1rem;
@@ -91,12 +92,19 @@ body {
 }
 
 .contact:hover {
-  background-color: #f3e8ff;
+  background-color: #6b2d64;
+  color: #FFFF;
 }
 
 .active-chat {
-  background-color: #e9dbff;
+  background-color: #6b2d64;
+  color: #FFFF;
 }
+.active-chat p{
+  background-color: #6b2d64;
+  color: #933E89;
+}
+
 
 .contact-img {
   width: 40px;
@@ -105,11 +113,23 @@ body {
 }
 
 .contact h3 {
+
   font-weight: 600;
 }
 
 .contact p {
-  color: #777;
+  color: #000000;
+  font-size: 0.9rem;
+}
+.contact :hover {
+  color: #ffffff;
+  font-size: 0.9rem;
+}
+.contacts p {
+  font-size: 0.9rem;
+}
+.contacts :hover {
+  color: #f9eeff;
   font-size: 0.9rem;
 }
 
@@ -134,7 +154,7 @@ body {
 }
 
 .chat-bubble {
-  background-color: #e3f2fd;
+  background-color: #f9eeff;
   border-radius: 15px 15px 15px 5px;
   padding: 10px 14px;
   display: inline-block;
@@ -173,12 +193,12 @@ body {
 }
 
 .input-field:focus {
-  border-color: #a678f9;
+  border-color: #933E89;
   box-shadow: 0 0 0 2px #e6d8ff;
 }
 
 .send-btn {
-  background-color: #7b3ff2;
+  background-color: #6b2d64;
   border: none;
   padding: 0.75rem;
   border-radius: 50%;
@@ -188,5 +208,5 @@ body {
 }
 
 .send-btn:hover {
-  background-color: #5b2bbf;
+  background-color: #6b2d64;
 }
