se corrigio una parte

--- a/src/app/categorias/categorias.component.html
+++ b/src/app/categorias/categorias.component.html
@@ -4,7 +4,8 @@
     <img src="assets/img/tecnologia.jpg" alt="Tecnología">
   </div>
 
-  <div class="categoria">
+
+  <div class="categoria" routerLink="/articulos" routerLinkActive="activo">
     <h3>Mascotas:</h3>
     <img src="assets/img/mascotas.png" alt="Mascotas">
   </div>
