--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,26 +11,11 @@
   </section>
 
   <!-- Categorías -->
-  <section class="categorias">
-    <h2>Categorías populares</h2>
-    <div class="categoria-grid">
-      <div class="card" routerLink="/categorias" routerLinkActive="activo">
-        <img src="assets/Libros.png" alt="Libros" />
-        <h3>Libros</h3>
-      </div>
-      <div class="card" routerLink="/categorias" routerLinkActive="activo">
-        <img src="assets/Mascotas.png" alt="Mascotas" />
-        <h3>Mascotas</h3>
-      </div>
-      <div class="card" routerLink="/categorias" routerLinkActive="activo">
-        <img src="assets/Moda.png" alt="Moda" />
-        <h3>Moda</h3>
-      </div>
-      <div class="card" routerLink="/categorias" routerLinkActive="activo">
-        <img src="assets/Juegos.png" alt="Juegos" />
-        <h3>Juegos</h3>
-      </div>
+ <section>
+ <div class="Inicio-text1">
+      <h1>Inicia en el mundo de los intercambios de la mejor manera</h1>
+      <p>Conoce nuestros terminos y condiciones aqui.</p>
+      <button  class="cta-btn" routerLink="/ayuda" routerLinkActive="activo">Click Aqui</button>
     </div>
-  </section>
-
+ </section>
 </main>
