--- a/src/app/mensajes/mensajes.component.html
+++ b/src/app/mensajes/mensajes.component.html
@@ -3,7 +3,6 @@
   <aside class="sidebar">
     <div class="sidebar-header">
       <h2>Chats</h2>
-      <span class="badge">20+</span>
     </div>
 
     <div class="contacts">
@@ -12,14 +11,6 @@
         <div>
           <h3>Hervin Cajas</h3>
           <p>Gracias.</p>
-        </div>
-      </div>
-
-      <div class="contact">
-        <img src="https://cdn-icons-png.flaticon.com/512/147/147142.png" class="contact-img" alt="">
-        <div>
-          <h3>Kevin Acosta</h3>
-          <p>por favor</p>
         </div>
       </div>
     </div>
@@ -48,9 +39,7 @@
       />
 
       <button class="send-btn" (click)="enviarMensaje()">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 12h14M12 5l7 7-7 7" />
-        </svg>
+          Enviar
       </button>
     </div>
 
