--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="Inicio-text">
       <h1>Intercambia lo que no usas por algo nuevo</h1>
       <p>Descubre miles de artículos y encuentra personas dispuestas a intercambiar contigo.</p>
-      <button  class="cta-btn" routerLink="/articulos" routerLinkActive="activo">Explorar artículos</button>
+      <button class="cta-btn" routerLink="/articulos" routerLinkActive="activo">Explorar artículos</button>
     </div>
     <div class="Inicio-img">
       <img src="assets/ImgHome.png" alt="Intercambio digital" />
@@ -11,11 +11,12 @@
   </section>
 
   <!-- Categorías -->
- <section>
- <div class="Inicio-text1">
-      <h1>Inicia en el mundo de los intercambios de la mejor manera</h1>
-      <p>Conoce nuestros terminos y condiciones aqui.</p>
-      <button  class="cta-btn" routerLink="/ayuda" routerLinkActive="activo">Click Aqui</button>
+  <section class="inicio-section">
+    <div class="Inicio-text1">
+      <h1>Inicia en el mundo de los intercambios de la mejor manera posible</h1>
+      <p>Conoce nuestras categorías y explora aquí.</p>
+      <button class="cta-btn" routerLink="/categorias">Click Aquí</button>
     </div>
- </section>
+  </section>
+
 </main>
