--- a/src/app/articulos/articulos.component.css
+++ b/src/app/articulos/articulos.component.css
@@ -66,3 +66,74 @@
   width: 180px;
   opacity: 0.7;
 }
+.header-articulos {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1.5rem;
+}
+
+.btn-publicar {
+  background: #0077ff;
+  color: white;
+  padding: 8px 16px;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.btn-publicar:hover {
+  background: #005fcc;
+}
+
+/* FORMULARIO */
+.formulario-container {
+  background: #fff;
+  padding: 1.5rem;
+  margin-bottom: 2rem;
+  border-radius: 12px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  text-align: left;
+}
+
+.label {
+  font-weight: bold;
+  margin-top: 10px;
+  display: block;
+}
+
+.input, .textarea, .select {
+  width: 100%;
+  padding: 10px;
+  margin-top: 4px;
+  margin-bottom: 12px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+}
+
+.btn-publicar2 {
+  background: #00a84f;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+}
+
+.btn-publicar2:hover {
+  background: #008a42;
+}
+
+.image-preview img {
+  width: 100%;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+
+.motivo {
+  margin-top: 6px;
+  font-size: 0.85rem;
+  color: #444;
+}
