--- a/src/app/categorias/categorias.component.html
+++ b/src/app/categorias/categorias.component.html
@@ -1,10 +1,8 @@
 <div class="categorias-container">
-  <div
-    class="categoria"
-    *ngFor="let categoria of categorias"
-    [routerLink]="['/articulos', categoria.nombre]"
-  >
+  <div class="categoria" *ngFor="let categoria of categorias" [routerLink]="['/articulos', categoria.nombre]">
+    <div class="categoria-icono">
+      <img [src]="categoria.imagen" [alt]="categoria.nombre" />
+    </div>
     <h3>{{ categoria.nombre }}</h3>
-    <img [src]="categoria.imagen" [alt]="categoria.nombre" />
   </div>
 </div>
